--- a/autocomplete/src/styles/App.css
+++ b/autocomplete/src/styles/App.css
@@ -1,5 +1,7 @@
-.App {
-  text-align: left;
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
 
 .Jus-logo{
@@ -10,7 +12,6 @@
 }
 
 .App-header {
-  z-index: 100;
   background-color: #a0a0a0;
   min-height: 100vh;
   min-width: 100vw;
@@ -19,15 +20,6 @@
   align-items: flex-start;
   color: white;
   
-}
-
-.Buscador{
-  padding-top: 5vh;
-  padding-left: 3vw;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
 }
 
 .Title{
@@ -39,6 +31,11 @@
   font-size: 1.2rem;
 }
 
-.Input{
+.Buscador{
+  padding-top: 5vh;
+  padding-left: 3vw;
   display: flex;
-}
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  }
