--- a/autocomplete/src/styles/Autosuggest.css
+++ b/autocomplete/src/styles/Autosuggest.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    height: 30vh;
+    max-height: 30vh;
     overflow-y: scroll;
     width: fit-content;
     }
